omni/tests/goldens/types/undefined_ident_02.err
tests/goldens/types/undefined_ident_02.omni:1:19: error: undefined identifier "missing2"
  let result2:int = missing2
                    ^~~ hint: declare the name before using it
