omni/tests/goldens/types/undefined_ident_02.omni
let result2:int = missing2
